...
      camera = label(id = Surface.cameraStatusId)
    }
  }

  private fun scanBadge() {
    if (checkSelfPermission(Manifest.permission.CAMERA) == PackageManager.PERMISSION_GRANTED) {
      camera.text = "Camera access allowed"
    } else {
      requestPermissions(arrayOf(Manifest.permission.CAMERA), CAMERA_REQUEST)
    }
  }

  override fun onRequestPermissionsResult(requestCode: Int, permissions: Array<out String>, grantResults: IntArray) {
...
